tufinca/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tufinca-backend
  labels:
    app: tufinca-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tufinca-backend
  template:
    metadata:
      labels:
        app: tufinca-backend
    spec:
      containers:
      - name: tufinca-backend
        image: tufinca-backend:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: tufinca-backend-service
spec:
  selector:
    app: tufinca-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
