tufinca/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tufinca
  namespace: 
spec:
  ingressClassName: public
  rules:
#    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tufinca
                port:
                  number: 8081
